# JARVIS-AI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agents/: __init__.py  orchestrator.py  personality.py  planner.py
automation/: __init__.py  desktop.py  os_integration.py  smart_home.py
backend/: __init__.py
backend/app/: __init__.py  dependencies.py  main.py
backend/routers/: __init__.py  ai.py  health.py  memory.py  root.py  skills.py  system.py  voice.py
backend/services/: __init__.py  ai_service.py  memory_service.py  voice_service.py
browser/: __init__.py  agent.py
coding/: __init__.py  agent.py
core/: __init__.py  exceptions.py
core/config/: __init__.py  exceptions.py  settings.py
core/security/: __init__.py  audit.py  crypto.py  permissions.py  sandbox.py
data/: contacts.json
data/email_drafts/: draft_20260715_160615.json  draft_20260715_160615.txt  draft_20260715_160640.json  draft_20260715_160640.txt  draft_20260715_160705.json  draft_20260715_160705.txt  draft_20260715_160732.json  draft_20260715_160732.txt  draft_20260716_032813.json  draft_20260716_032813.txt  draft_20260716_034020.json  draft_20260716_034020.txt  draft_20260716_034055.json  draft_20260716_034055.txt  draft_20260716_040028.json  draft_20260716_040028.txt  draft_20260716_041203.json  draft_20260716_041203.txt
database/vector_store/: chroma.sqlite3
docs/: IRON_MAN_OS.md  QUALITY.md  ROADMAP.md  architecture.md
docs/guides/: __init__.py  email_and_voice.md  frontend_guide.md  installation.md
electron/: main.js  overlay.html  package.json  preload.js
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: console.html  hud.html  index.html  manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  Header.tsx  Sidebar.tsx  StatusPanel.tsx  VoiceControl.tsx
frontend/src/hooks/: useApi.ts
learning/: __init__.py  pipeline.py
memory/: __init__.py  contacts.py  vector_store.py
mobile/: README.md  pwa-sw.js
plugins/: __init__.py  loader.py
scripts/: dev.py  download_piper_voice.py  quality_gate.py  run.py  start_jarvis.sh  validate.py
skills/: __init__.py  apps.py  base.py  browser.py  calendar_skill.py  desktop_gui_skill.py  email_skill.py  everyday.py  registry.py  smart_home_skill.py  system_info.py  vision_skill.py  work_ai.py
tests/: __init__.py
tests/integration/: __init__.py  test_modules.py
tests/unit/: __init__.py  test_config.py  test_email.py  test_personality.py  test_planner.py  test_quality_matrix.py  test_skills.py  test_voice.py  test_work_ai.py
vision/: __init__.py  camera.py  ocr.py  screen_understanding.py
voice/: __init__.py  piper_tts.py  service.py  stt.py  tts.py  wake_word.py
(+1 files in other folders)
