[project]
name = "jarvis-os"
version = "1.0.0"
description = "JARVIS OS - Professional offline-first AI Desktop Operating Assistant"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "JARVIS Engineering Team", email = "engineering@jarvis-os.dev"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.35",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "cryptography>=43.0.1",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "ruff>=0.6.7",
    "pre-commit>=3.8.0",
]
voice = [
    "faster-whisper>=1.0.3",
    "sounddevice>=0.5.0",
    "piper-tts>=1.2.0",
    # Note: core jarvis-formant TTS needs NO extra packages (pure Python).
]
vision = [
    "opencv-python-headless>=4.10.0",
    "pytesseract>=0.3.13",
    "pillow>=10.4.0",
]
automation = [
    "playwright>=1.47.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7.7",
]
ai = [
    "ollama>=0.3.3",
    "chromadb>=0.5.5",
    "numpy>=2.1.1",
]
all = [
    "jarvis-os[dev,voice,vision,automation,ai]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "core", "memory", "voice", "vision", "automation", "security", "agents"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501", "B008"]  # line length handled by formatter, fastapi deps

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=backend --cov=core --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend", "core"]
omit = ["*/tests/*", "*/__init__.py"]

[project.scripts]
jarvis = "backend.app.main:cli_entry"
jarvis-server = "backend.app.main:run_server"

[project.urls]
Homepage = "https://github.com/ARENJKY369/JARVIS-AI"
Documentation = "https://github.com/ARENJKY369/JARVIS-AI/tree/main/docs"
Repository = "https://github.com/ARENJKY369/JARVIS-AI"
Issues = "https://github.com/ARENJKY369/JARVIS-AI/issues"
